# beltmatic-solver

./: .gitignore  LICENSE  Pipfile  main.py  pyproject.toml  t.py
beltmatic-solver/: operation_node.py  solver.py  tui.py
src/: app.py
src/beltmatic-solver/: __main__.py  operation_node.py  solver.py
