[project]
name = "beltmatic-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.5",
    "rich>=14.0.0",
    "textual>=3.2.0",
]

[tool.black]
line-length = 99
target-version = ["py311", "py312", "py313"]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
]
